# elephandroid

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 3bef0691f0fa_initial_schema.py  a1b2c3d4e5f6_add_subscriptions_table.py
frontend/: Dockerfile
infra/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: azure-deploy.sh
src/: config.py  database.py  main.py  middleware.py
src/ai/: document_parser.py  models.py  ollama_client.py  prompts.py  routes.py  task_extractor.py
src/auth/: dependencies.py  models.py  msal_client.py  routes.py  token_cache.py
src/billing/: __init__.py  client.py  middleware.py  models.py  routes.py
src/bot/: client.py  events.py  routes.py  transcript.py
src/chat/: actions.py  engine.py  models.py  prompts.py  rag.py  routes.py  streaming.py
src/emails/: client.py  routes.py
src/excel/: models.py  parser.py
src/meetings/: client.py  routes.py  summarizer.py
src/planner/: client.py  models.py  routes.py
src/prompts/: __init__.py  chat.py  extraction.py  meeting.py  reports.py
src/providers/: __init__.py  base.py  claude.py  factory.py  gemini.py  ollama.py  openai_provider.py
src/reports/: data_fetcher.py  docx_builder.py  models.py  pptx_builder.py  routes.py
src/sync/: engine.py  routes.py
src/teams_bot/: __init__.py  bot.py  cards.py  routes.py
tests/: conftest.py  test_actions.py  test_aggregator.py  test_data_fetcher.py  test_excel_parser.py  test_models.py  test_providers.py  test_teams_bot.py
(+38 files in other folders)
